--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>Totalizador</h1>
+    <form id="total-form">
+      <label for="precio-item">Precio por ítem:</label>
+      <input type="number" id="precio-item" />
+      <input type="submit" value="Ingresar" id="total-button" />
     </form>
     <div id="resultado-div"></div>
-
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
