--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
       <input type="number" id="precio-item" />
       <label for="cantidad-item">Cantidad de ítems:</label>
       <input type="number" id="cantidad-item" />
+      <select name="estados" id="estados">
+        <option value="UT">UT</option>
+        <option value="NV">NV</option>
+        <option value="TX">TX</option>
+        <option value="AL">AL</option>
+        <option value="CA">CA</option>
+     </select>
       <input type="submit" value="Ingresar" id="total-button" />
     </form>
     <div id="resultado-div"></div>
